# ihtc-challenge

./: README.md  main.ipynb  main.py  pyproject.toml
results/: results.csv  results.jsonl
results/convergence/: hist_i04_seed1011_mut0.15.json  hist_i04_seed1415_mut0.15.json  hist_i04_seed1448_mut0.15.json  hist_i04_seed1912_mut0.15.json  hist_i04_seed2011_mut0.15.json  hist_i04_seed2415_mut0.15.json  hist_i04_seed2448_mut0.15.json  hist_i04_seed2912_mut0.15.json  hist_i04_seed3011_mut0.15.json  hist_i04_seed3415_mut0.15.json  hist_i04_seed3448_mut0.15.json  hist_i04_seed3912_mut0.15.json  hist_i04_seed4011_mut0.15.json  hist_i04_seed415_mut0.15.json  hist_i04_seed42_mut0.01.json  hist_i04_seed42_mut0.15.json  hist_i04_seed42_mut0.5.json  hist_i04_seed4415_mut0.15.json  hist_i04_seed4448_mut0.15.json  hist_i04_seed448_mut0.15.json  hist_i04_seed4912_mut0.15.json  hist_i04_seed5011_mut0.15.json  hist_i04_seed912_mut0.15.json  hist_i06_seed1043_mut0.15.json  hist_i06_seed1088_mut0.15.json  hist_i06_seed1525_mut0.15.json  hist_i06_seed1576_mut0.15.json  hist_i06_seed2043_mut0.15.json  hist_i06_seed2088_mut0.15.json  hist_i06_seed2525_mut0.15.json  hist_i06_seed2576_mut0.15.json  hist_i06_seed3043_mut0.15.json  hist_i06_seed3088_mut0.15.json  hist_i06_seed3525_mut0.15.json  hist_i06_seed3576_mut0.15.json  hist_i06_seed4043_mut0.15.json  hist_i06_seed4088_mut0.15.json  hist_i06_seed43_mut0.15.json  hist_i06_seed4525_mut0.15.json  hist_i06_seed4576_mut0.15.json  (+3 more)
src/: data_loader.py  experiments.py  genetic_algorithm.py  metaheuristic.py  solver.py
