[project]
name = "ihtc-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "pulp>=3.3.0",
    "pygad>=3.5.0",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]
